Jupyter Notebook Training Environment

--- a/Example_Notebook.ipynb
+++ b/Example_Notebook.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -266,112 +266,61 @@
       "Experiment configuration loaded from file\n",
       "________________________________________________________________________________\n",
       "session_epoch:        0\n",
-      "experiment_epoch:     48000\n",
+      "experiment_epoch:     49000\n",
       " \n",
       "train_loss\n",
-      " on_epoch:            0\n",
-      " on_average:          0.0\n",
+      " on_epoch:            10.305828\n",
+      " on_average:          10.305828094482422\n",
       "val_loss\n",
-      " on_epoch:            12.25685977935791\n",
-      " on_average:          12.25685977935791\n",
+      " on_epoch:            12.880228996276855\n",
+      " on_average:          12.880228996276855\n",
       "________________________________________________________________________________\n",
       "session_epoch:        100\n",
-      "experiment_epoch:     48100\n",
+      "experiment_epoch:     49100\n",
       " \n",
       "train_loss\n",
-      " on_epoch:            0\n",
-      " on_average:          0.0\n",
+      " on_epoch:            2.8288162\n",
+      " on_average:          6.754622496366501\n",
       "val_loss\n",
-      " on_epoch:            13.935139656066895\n",
-      " on_average:          7.512497856616974\n",
+      " on_epoch:            2.8813509941101074\n",
+      " on_average:          9.805879988670348\n",
       "________________________________________________________________________________\n",
       "session_epoch:        200\n",
-      "experiment_epoch:     48200\n",
+      "experiment_epoch:     49200\n",
       " \n",
       "train_loss\n",
-      " on_epoch:            0\n",
-      " on_average:          0.0\n",
+      " on_epoch:            3.530436\n",
+      " on_average:          6.145809543132782\n",
       "val_loss\n",
-      " on_epoch:            10.700708389282227\n",
-      " on_average:          7.307984166145324\n",
+      " on_epoch:            8.116645812988281\n",
+      " on_average:          4.463913865089417\n",
       "________________________________________________________________________________\n",
       "session_epoch:        300\n",
-      "experiment_epoch:     48300\n",
+      "experiment_epoch:     49300\n",
       " \n",
       "train_loss\n",
-      " on_epoch:            0\n",
-      " on_average:          0.0\n",
+      " on_epoch:            8.336498\n",
+      " on_average:          6.700106370449066\n",
       "val_loss\n",
-      " on_epoch:            3.4015560150146484\n",
-      " on_average:          7.024633859395981\n",
+      " on_epoch:            9.294431686401367\n",
+      " on_average:          9.698451690673828\n",
       "________________________________________________________________________________\n",
       "session_epoch:        400\n",
-      "experiment_epoch:     48400\n",
+      "experiment_epoch:     49400\n",
       " \n",
       "train_loss\n",
-      " on_epoch:            0\n",
-      " on_average:          0.0\n",
+      " on_epoch:            6.7197\n",
+      " on_average:          7.2676088082790375\n",
       "val_loss\n",
-      " on_epoch:            10.660325050354004\n",
-      " on_average:          7.19497265458107\n",
-      "________________________________________________________________________________\n",
-      "session_epoch:        500\n",
-      "experiment_epoch:     48500\n",
-      " \n",
-      "train_loss\n",
-      " on_epoch:            0\n",
-      " on_average:          0.0\n",
-      "val_loss\n",
-      " on_epoch:            5.4958038330078125\n",
-      " on_average:          7.308375978469849\n",
-      "LocalBatcher-local/data/processed/val_drv_new/: Restarted\n",
-      "________________________________________________________________________________\n",
-      "session_epoch:        600\n",
-      "experiment_epoch:     48600\n",
-      " \n",
-      "train_loss\n",
-      " on_epoch:            0\n",
-      " on_average:          0.0\n",
-      "val_loss\n",
-      " on_epoch:            6.2287797927856445\n",
-      " on_average:          7.531255042552948\n",
-      "________________________________________________________________________________\n",
-      "session_epoch:        700\n",
-      "experiment_epoch:     48700\n",
-      " \n",
-      "train_loss\n",
-      " on_epoch:            0\n",
-      " on_average:          0.0\n",
-      "val_loss\n",
-      " on_epoch:            2.7313222885131836\n",
-      " on_average:          7.782380877733231\n",
-      "________________________________________________________________________________\n",
-      "session_epoch:        800\n",
-      "experiment_epoch:     48800\n",
-      " \n",
-      "train_loss\n",
-      " on_epoch:            0\n",
-      " on_average:          0.0\n",
-      "val_loss\n",
-      " on_epoch:            9.940670013427734\n",
-      " on_average:          6.915862286090851\n",
-      "________________________________________________________________________________\n",
-      "session_epoch:        900\n",
-      "experiment_epoch:     48900\n",
-      " \n",
-      "train_loss\n",
-      " on_epoch:            0\n",
-      " on_average:          0.0\n",
-      "val_loss\n",
-      " on_epoch:            3.514057159423828\n",
-      " on_average:          7.29223633646965\n",
+      " on_epoch:            7.423577308654785\n",
+      " on_average:          6.43052975654602\n",
       "________________________________________________________________________________\n",
       "session_time:\n",
-      " hours:               0.12087769819630517\n",
-      " minutes:             7.2526618917783106\n",
+      " hours:               0.38434766153494515\n",
+      " minutes:             23.06085969209671\n",
       "total_time:\n",
-      " hours:               12.821441576083501\n",
-      " minutes:             769.2864945650101\n",
+      " hours:               13.205789237618447\n",
+      " minutes:             792.3473542571068\n",
       "================================================================================\n"
      ]
     }
@@ -381,8 +330,8 @@
     "                       detector=detector,\n",
     "                       data_flow_train=data_flow_train,\n",
     "                       data_flow_test=data_flow_test,\n",
-    "                       epochs=1000,\n",
-    "                       test_only=True)"
+    "                       epochs=500,\n",
+    "                       test_only=False)"
    ]
   }
  ],
